--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,4 +1,4 @@
-img {
+/*img {
     max-height:200px;
     max-width:200px;
     height:auto;
@@ -10,7 +10,7 @@ body {
     font-size: 1em;
     font-weight: 600;
     line-height: 2;
-    background-image: url("../images/market-vegetables-on-table.jpg");
+    /*background-image: url("../images/market-vegetables-on-table.jpg"); 
     background-size: cover;
     background-attachment: fixed;
     background-position: 80%;
