--- a/Assets/CSS/style2.css
+++ b/Assets/CSS/style2.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
 :root {
     --light-color: #fff;
     --dark-color: #282828;
@@ -10,12 +12,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Nunito", sans-serif;
 }
 
 body {
     height: 100vh;
     width: 100vw;
     background: var(--light-color);
+    overflow: hidden;
 }
 
 .container {
@@ -81,15 +85,20 @@ header {
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    flex-wrap: wrap;
+    height: calc(100vh - (var(--header-height) + var(--search-height) ));
+    overflow:  hidden;
+    overflow-y: auto;
 }
 
 .recipe {
-    height: 200px;
-    width: 300px;
+    height: 380px;
+    width: 320px;
     padding: 4px;
     box-shadow: 0px 0px 8px 2px var(--border-color);
     margin: 20px;
     transition: all 200ms ease-in-out;
+    border-radius: 4px 4px 0px 0px ;
 }
 
 .recipe-title {
@@ -101,7 +110,7 @@ header {
 }
 
 .recipe-img {
-  height: 140px;  
+  height: 100px;  
 }
 
 .recipe-image img {
@@ -133,13 +142,76 @@ header {
     padding: 5px;
 }
 
+.recipe:hover {
+    height: 480px;
+}
+
 .recipe:hover .recipe-text {
-    height: 120px;
+    height: 95px;
+    width: 295px;
     visibility: visible;
     opacity: 1;
     transform: scale(1);
+    margin-top: 220px;
+    margin-left: 9px;
+
 }
 
-.recipe:hover {
-    height: 350px;
+::selection {
+    color: var(--light-color);
+    background: limegreen;
 }
+
+/* #loading {
+  background: url(images/Spinnercolor.gif) no-repeat center center; 
+  position: absolute;
+  width: 100%; 
+  height: 100%;
+  z-index: 999;
+} */
+
+.hide {
+    display: none 1;
+}
+
+@media only screen and (max-width: 700px) {
+    body {
+        background: rgb(54, 194, 54)
+    }
+    .recipe {
+        background: var(--light-color);
+        box-shadow: 0px 0px 10px 2px var(--dark-color);
+        width: 350px;
+    }
+    input[type="text"] {
+        background: transparent;
+        color: var(--light-color);
+    }
+    .btn {
+        background: var(--light-color);
+        color: var(--dark-color);
+    }
+}
+
+/* Scroll Bar CSS */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #ccc;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #817171;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: black;
+}
+
+
+
