--- a/Assets/CSS/style2.css
+++ b/Assets/CSS/style2.css
@@ -29,7 +29,7 @@ body {
 
 header {
     height: var(--header-height);
-    background: var(--dark-color);
+    background: rgb(56, 197, 218);
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -43,7 +43,7 @@ header {
     justify-content: center;
     align-items: center;
     height: var(--search-height);
-    gap: 10px;
+    gap: 15px;
     box-shadow: 0px 2px 8px 0px var(--border-color);
 }
 
@@ -159,7 +159,7 @@ header {
 
 ::selection {
     color: var(--light-color);
-    background: limegreen;
+    background: rgb(56, 197, 218);
 }
 
 /* #loading {
@@ -174,9 +174,11 @@ header {
     display: none 1;
 }
 
-@media only screen and (max-width: 700px) {
+/* Media Queries */
+
+@media only screen and (min-width: 320px) {
     body {
-        background: rgb(54, 194, 54)
+        background: rgb(54, 194, 54);
     }
     .recipe {
         background: var(--light-color);
@@ -192,6 +194,83 @@ header {
         color: var(--dark-color);
     }
 }
+
+@media only screen and (min-width: 480px) {
+    body {
+        background: red;
+    }
+    .recipe {
+        background: var(--light-color);
+        box-shadow: 0px 0px 10px 2px var(--dark-color);
+        width: 350px;
+    }
+    input[type="text"] {
+        background: transparent;
+        color: var(--light-color);
+    }
+    .btn {
+        background: var(--light-color);
+        color: var(--dark-color);
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    body {
+        background: blue;
+    }
+    .recipe {
+        background: var(--light-color);
+        box-shadow: 0px 0px 10px 2px var(--dark-color);
+        width: 350px;
+    }
+    input[type="text"] {
+        background: transparent;
+        color: var(--light-color);
+    }
+    .btn {
+        background: var(--light-color);
+        color: var(--dark-color);
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    body {
+        background: purple;
+    }
+    .recipe {
+        background: var(--light-color);
+        box-shadow: 0px 0px 10px 2px var(--dark-color);
+        width: 350px;
+    }
+    input[type="text"] {
+        background: transparent;
+        color: var(--light-color);
+    }
+    .btn {
+        background: var(--light-color);
+        color: var(--dark-color);
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    body {
+        background: var(--light-color);
+    }
+    .recipe {
+        background: var(--light-color);
+        box-shadow: 0px 0px 10px 2px var(--dark-color);
+        width: 350px;
+    }
+    input[type="text"] {
+        background: transparent;
+        color: var(--dark-color);
+    }
+    .btn {
+        background: var(--light-color);
+        color: var(--dark-color);
+    }
+}
+
 
 /* Scroll Bar CSS */
 ::-webkit-scrollbar {
