--- a/Assets/CSS/style2.css
+++ b/Assets/CSS/style2.css
@@ -32,10 +32,11 @@ header {
     background: rgb(54, 119, 129);
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
     color: var(--light-color);
     gap: 10px;
     padding-right: 30px;
+    font-size: 30px;
 }
 
 .search {
