--- a/Assets/CSS/style2.css
+++ b/Assets/CSS/style2.css
@@ -179,8 +179,18 @@ header {
 
 @media only screen and (min-width: 320px) {
     body {
-        background: rgb(54, 194, 54);
+        background: var(--light-color);
     }
+
+    header {
+        font-size: 20px;
+        padding-left: 25px;
+    }
+
+    .search {
+        margin: 10px;
+    }
+
     .recipe {
         background: var(--light-color);
         box-shadow: 0px 0px 10px 2px var(--dark-color);
@@ -198,7 +208,7 @@ header {
 
 @media only screen and (min-width: 480px) {
     body {
-        background: red;
+        background: var(--light-color);
     }
     .recipe {
         background: var(--light-color);
@@ -217,7 +227,7 @@ header {
 
 @media only screen and (min-width: 768px) {
     body {
-        background: blue;
+        background: var(--light-color);
     }
     .recipe {
         background: var(--light-color);
@@ -236,7 +246,7 @@ header {
 
 @media only screen and (min-width: 992px) {
     body {
-        background: purple;
+        background: var(--light-color);
     }
     .recipe {
         background: var(--light-color);
