--- a/Assets/CSS/style2.css
+++ b/Assets/CSS/style2.css
@@ -141,12 +141,7 @@ header h2 {
   margin: 80px auto;
 }
 
-.recipe-image {
-  width: 100%;
-  height: 100%;
-}
-
-.recipe-image img {
+.recipe-img img {
   height: 100%;
   width: 100%;
   object-fit: cover;
@@ -243,4 +238,3 @@ footer {
 ::-webkit-scrollbar-thumb:hover {
   background: black;
 }
-
